<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdSubmission">

    <ImageView
        android:id="@+id/backgrond"
        android:layout_width="415dp"
        android:layout_height="736dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background"
        android:contentDescription="@string/todo" />

    <include
        android:id="@+id/include"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/whitebox"
        android:layout_width="339dp"
        android:layout_height="608dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        app:layout_constraintVertical_bias="0.447"
        app:srcCompat="?attr/popupMenuBackground"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="297dp"
        android:layout_height="22dp"
        android:layout_marginTop="116dp"
        android:text="@string/newspaper"
        android:fontFamily="@font/ebrima"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="112dp"
        android:layout_height="39dp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/ebrima"
        android:text="@string/edit_ad"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="297dp"
        android:layout_height="23dp"
        android:layout_marginTop="188dp"
        android:fontFamily="@font/ebrima"
        android:text="@string/language"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.439"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="244dp"
        android:layout_height="24dp"
        android:layout_marginTop="316dp"
        android:fontFamily="@font/ebrima"
        android:text="@string/category"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.305"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="271dp"
        android:layout_height="24dp"
        android:layout_marginTop="256dp"
        android:fontFamily="@font/ebrima"
        android:text="@string/date_to_be_published"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.378"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="253dp"
        android:layout_height="26dp"
        android:layout_marginTop="384dp"
        android:fontFamily="@font/ebrima"
        android:text="@string/advertisement"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.322"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="240dp"
        android:layout_height="23dp"
        android:layout_marginTop="524dp"
        android:fontFamily="@font/ebrima"
        android:text="@string/word_count_12"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.306"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <Button
        android:id="@+id/button14"
        android:layout_width="123dp"
        android:layout_height="50dp"
        android:layout_marginBottom="52dp"
        android:text="@string/delete"
        app:backgroundTint="#33ccff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.784"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button15"
        android:layout_width="123dp"
        android:layout_height="50dp"
        android:layout_marginBottom="52dp"
        android:text="@string/update"
        app:backgroundTint="#33ccff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.225"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName7"
        android:layout_width="305dp"
        android:layout_height="41dp"
        android:layout_marginTop="196dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/lankadeepa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTextTextPersonName8"
        android:layout_width="305dp"
        android:layout_height="45dp"
        android:layout_marginTop="256dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/sinhala"
        app:layout_constraintEnd_toEndOf="@+id/include"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTextTextPersonName9"
        android:layout_width="305dp"
        android:layout_height="45dp"
        android:layout_marginTop="324dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/_2021_08_21"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="@+id/include"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTextTextPersonName10"
        android:layout_width="305dp"
        android:layout_height="45dp"
        android:layout_marginTop="388dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/land_for_sale"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTextTextMultiLine2"
        android:layout_width="306dp"
        android:layout_height="108dp"
        android:layout_marginTop="464dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text="@string/land_for_sale_in_kottawa_tel_07134562769"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="@+id/include"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
