<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdSubmission">

    <ImageView
        android:id="@+id/backgrond"
        android:layout_width="415dp"
        android:layout_height="736dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background"
        android:contentDescription="@string/todo" />

    <include
        android:id="@+id/include"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/whitebox"
        android:layout_width="341dp"
        android:layout_height="572dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        app:layout_constraintVertical_bias="0.456"
        app:srcCompat="?attr/popupMenuBackground"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="122dp"
        android:layout_height="29dp"
        android:layout_marginTop="116dp"
        android:fontFamily="@font/ebrima"
        android:text="@string/newspaper"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.183"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="149dp"
        android:layout_height="35dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/ebrima"
        android:text="@string/ad_review"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="134dp"
        android:layout_height="26dp"
        android:layout_marginTop="240dp"
        android:fontFamily="@font/ebrima"
        android:text="@string/category"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.191"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="128dp"
        android:layout_height="28dp"
        android:layout_marginTop="160dp"
        android:fontFamily="@font/ebrima"
        android:text="@string/date_to_be"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="128dp"
        android:layout_height="28dp"
        android:layout_marginTop="188dp"
        android:fontFamily="@font/ebrima"
        android:text="@string/published"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="258dp"
        android:layout_height="30dp"
        android:layout_marginTop="280dp"
        android:fontFamily="@font/ebrima"
        android:text="@string/advertisement"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="94dp"
        android:layout_height="21dp"
        android:layout_marginTop="496dp"
        android:fontFamily="@font/ebrima"
        android:text="Word Count :"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <Button
        android:id="@+id/button14"
        android:layout_width="123dp"
        android:layout_height="50dp"
        android:layout_marginBottom="36dp"
        android:text="@string/confirm"
        app:backgroundTint="#33ccff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.784"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button15"
        android:layout_width="123dp"
        android:layout_height="50dp"
        android:layout_marginBottom="36dp"
        android:text="@string/reject"
        app:backgroundTint="#33ccff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.201"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/c_v_body"
        android:layout_width="306dp"
        android:layout_height="172dp"
        android:layout_marginTop="372dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="Land for sale in kottawa \nTel :- 0715349254"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textColor="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/include"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/c_v_newspaper"
        android:layout_width="149dp"
        android:layout_height="23dp"
        android:layout_marginTop="176dp"
        android:hint="Lankadeepa"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.763"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/c_v_date"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="224dp"
        android:hint="2021/11/23"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.663"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/c_v_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="296dp"
        android:text="@string/land_for_sale"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.682"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/c_v_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="496dp"
        android:hint="11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.402"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />


</androidx.constraintlayout.widget.ConstraintLayout>